fix: correct quickselect, self-invocation, and test issues
- Replace Lomuto partition with three-way (Dutch National Flag) in
  quickselect so all-equal inputs run in O(n) instead of O(n²)
- Make median() use quickselect for O(n) average instead of O(n log n)
- Validate chunkSize > 0 in splitIntoChunks to prevent infinite loops
- Extract InvoiceTransactionWorker to fix @Transactional self-invocation
  bug in InvoiceService async paths
- Replace List.of(null) with Arrays.asList(null) in tests (List.of
  rejects null elements)
- Add missing @Mock Executor fields in ReviewServiceParallelTest and
  InvoiceServiceParallelTest
- Add regression test for all-equal quickselect and invalid chunkSize

New file:
- payment/InvoiceTransactionWorker.java